kubernetes/apps/app-cluster/media/qbittorrent/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "BitTorrent client (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "http://qbittorrent.krapulax.home"
    gethomepage.dev/icon: "qbittorrent.png"
    gethomepage.dev/name: "Qbittorrent (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - qbittorrent.krapulax.home
  rules:
    - backendRefs:
        - name: qbittorrent
          namespace: media
          port: 8080
