kubernetes/apps/app-cluster/media/qbittorrent/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: qbittorrent.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Torrent downloads"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "https://qbittorrent.krapulax.dev"
    gethomepage.dev/icon: "qbittorrent.png"
    gethomepage.dev/name: "qBittorrent"
    gethomepage.dev/weight: "80"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - qbittorrent.krapulax.dev
  rules:
    - backendRefs:
        - name: qbittorrent
          namespace: media
          port: 8080
